--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <meta property="og:title" content="Cypher Bank" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Stack, spend, receive, send, secure and hodl. Quickly, Intuitively, with low fees." />
-        <meta property="og:image" content="https://cyperbank.carrd.co/assets/images/card.jpg?v=d7fb93b3" />
+        <meta property="og:image" content="https://cyperbank.io/assets/images/card.jpg?v=d7fb93b3" />
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:image:width" content="1280" />
         <meta property="og:image:height" content="800" />
-        <meta property="og:url" content="https://cyperbank.carrd.co" />
+        <meta property="og:url" content="https://cyperbank.io" />
         <meta property="twitter:card" content="summary_large_image" />
-        <link rel="canonical" href="https://cyperbank.carrd.co" />
+        <link rel="canonical" href="https://cyperbank.io" />
         <link href="https://fonts.googleapis.com/css2?display=swap&family=Inter:ital,wght@0,300;0,600;1,300;1,600" rel="stylesheet" type="text/css" />
         <style>
             html,
