--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Cypher Bank" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Stack, spend, receive, send, secure and hodl. Quickly, Intuitively, with low fees." />
-        <meta property="og:image" content="https://cyperbank.io/assets/images/card.jpg?v=d7fb93b3" />
+        <meta property="og:image" content="/assets/images/girl.png?v=d7fb93b3" />
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:image:width" content="1280" />
         <meta property="og:image:height" content="800" />
