Colors index.html

--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@
             }
 
             .icons.style1 a {
-                border: solid 2px #00FFC2;
+                border: solid 2px #ED1295;
             }
 
             .icons.style1 li a+svg {
